--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -271,6 +271,13 @@ img{
     margin-bottom: var(--mb-4);
     color: var(--text-color);
 }
+.parallax{
+    background: url('https://images.wallpaperscraft.com/image/code_text_programming_146694_1366x768.jpg') no-repeat center;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 500px;
+
+}
 /* ===== SKILLS =====*/
 .skills__container{
     row-gap: 2rem;
