--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -209,6 +209,105 @@ img{
     bottom: 0;
     width: 151px;
 }
+.box-area{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden0;
+}
+.box-area li{
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 25px;
+    height: 25px;
+    background: rgba(255,255,255,.2);
+    animation: animate 20s linear infinite;
+    bottom: -150px;
+}
+.box-area li:nth-child(1)
+{
+    left: 9%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+}
+.box-area li:nth-child(2)
+{
+    left:-3%;
+
+    width: 30px;
+    height: 30px;
+    animation-delay: 1.5s;
+    animation-duration: 10s;
+}
+.box-area li:nth-child(3)
+{
+    left: 40%;
+    width: 100px;
+    height: 100px;
+    animation-delay: 5.5s;
+    
+}
+.box-area li:nth-child(4)
+{
+    left: -19%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 15s;
+}
+.box-area li:nth-child(5)
+{
+    left: 65%;
+    width: 40px;
+    height: 40px;
+    animation-delay: 0s;
+    ;
+}
+.box-area li:nth-child(6){
+    left: 15%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 0s;
+    animation-duration: 15s;
+}
+.box-area li:nth-child(7)
+{
+    right: 25%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 15s;
+}
+.box-area li:nth-child(8){
+    left:-50%;
+
+    width: 30px;
+    height: 30px;
+    animation-delay: 1.5s;
+    animation-duration: 10s;
+}
+.box-area li:nth-child(9)
+{
+   right: 140%;
+    width: 100px;
+    height: 100px;
+    animation-delay: 5.5s;
+    
+}
+@keyframes animate{
+    0%{
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+    }
+    100%{
+        transform: translateY(-800px) rotate(360deg);
+        opacity: 1;
+    }
+}
 
 /* ===== ABOUT =====*/
 .about__container{
