--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -174,6 +174,14 @@ img{
     top: 2rem;
     background-color: var(--first-color);
 }
+.ping1,.ping2,.ping3,.ping4,.ping5{
+    position: relative;
+    
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
 
 /*===== HOME =====*/
 .home{
@@ -310,6 +318,19 @@ img{
 }
 
 /* ===== ABOUT =====*/
+.ping1{
+    background-image: url('https://images.pexels.com/photos/1097930/pexels-photo-1097930.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+min-height: 100%;
+}
+.paraabout{
+    font-variant: none;
+  background-color: rgba(37, 25, 25, 0.699);
+  text-align: justify;
+  padding-right: 5%;
+  padding-left: 5%;
+  margin-left: 25%;
+  color: rgb(252, 252, 252);
+}
 .about__container{
     justify-items: center;
     row-gap: 2rem;
@@ -348,6 +369,10 @@ img{
     color: var(--first-color);
 }
 /* ===== ACADEMICS =====*/
+.ping2{
+    background-image: url('https://images.pexels.com/photos/4464918/pexels-photo-4464918.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+min-height: 400px;
+}
 .academics__container{
     justify-items: center;
     row-gap: 2rem;
@@ -378,6 +403,10 @@ img{
 
 }
 /* ===== SKILLS =====*/
+.ping3{
+    background-image: url('https://images.pexels.com/photos/733852/pexels-photo-733852.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+min-height: 400px;
+}
 .skills__container{
     row-gap: 2rem;
 }
@@ -403,6 +432,10 @@ img{
 }
 
 /* =====.project =====*/
+.ping4{
+    background-image: url('https://images.pexels.com/photos/132199/pexels-photo-132199.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+min-height: 400px;
+}
 .project{
     background-color: var(--black-color);
 }
@@ -445,7 +478,10 @@ img{
 
 
 /* ===== CONTACT =====*/
-
+.ping5{
+    background-image: url('https://images.pexels.com/photos/1906440/pexels-photo-1906440.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+min-height: 100%;
+}
 .contact__container{
     row-gap: 2rem;
 }
